# oh-my-loop

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  package.json
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pattern_proposal.md
.github/workflows/: ci.yml
apps/opportunity-system/: SKILL.md
assets/: demo-video-script.md  promotion-text.md  show-hn-post.md  video-script.md
assets/promo-runtime-demo/: README.md  capture.mjs  game.js  index.html  server.mjs  styles.css
benchmarks/: README.md  router-accuracy-report-v2.md  router-accuracy-report.md  router-accuracy-report.txt  router_accuracy.py  router_accuracy_v2.py
core/cost-consciousness/: SKILL.md
core/open-source-first/: SKILL.md
core/team-sop/: SKILL.md
core/think-like-human/: SKILL.md
core/verification-gate/: SKILL.md
docs/: architecture.md  principles.md
docs/en/: README.md  how-it-works.md  trust-model.md
docs/zh/: README.md  how-it-works.md  maturity.md  trust-model.md
examples/coding/: loop.md
examples/content/: loop.md
examples/habit/: loop.md
lib/: model-router.mjs  runtime.mjs  storage.mjs  team.mjs
plugins/: README.md
reference-implementations/python/: README.md  pyproject.toml  test_oh_my_loop.py
reference-implementations/python/oh_my_loop/: __init__.py  config.py  feedback.py  gates.py  kernel.py  memory.py  models.py  patterns.py  router.py  verify.py
test/: runtime.test.mjs  skill.test.mjs
using-oh-my-loop/: SKILL.md
write-a-loop/: SKILL.md
(+70 files in other folders)
